--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,11 @@ sky:
     admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+# aliyunOSS自定义配置
+aliyun:
+  oss:
+    endpoint: https://oss-cn-guangzhou.aliyuncs.com
+    accessKeyId: LTAI5tSXGTdCoG8EW3vEXNVE
+    accessKeySecret: qO819Ue3gBeZNeyjUQX9Ueylzqeemo
+    bucketName: web-mugen
