--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -4,5 +4,5 @@ sky:
     host: localhost
     port: 3306
     database: sky_take_out
-    username: root
-    password: mysql@Cz123
+    username: 
+    password: 
